# Z5

./: .gitignore  .gitmodules  CMakeLists.txt  FindSwitch.cmake  LICENSE  Makefile  README.md  Z5.cflags  Z5.config  Z5.files  Z5.includes  Z5.sln  Z5.vcxproj  Z5.vcxproj.filters  cmake_install.cmake  em.mk  linux.mk  linuxclang.mk  logo.ai  notes.txt  switch.mk  todo.txt  z5.doxy
.github/workflows/: ccpp.yml
data/: blockTable.json  fuelList.json
data/defData/: universe.json
include/: audioManager.hpp  block.hpp  colliderManager.hpp  config.hpp  controllable.hpp  fdd.hpp  fontManager.hpp  fuel.hpp  fuelContainer.hpp  gameCore.h  gameCore.hpp  graphics.hpp  graphicsManager.hpp  interactable.hpp  jsonFactory.hpp  jsonTools.hpp  nodeGenerator.hpp  observer.hpp  physics.hpp  physicsEngine.hpp  prefab.hpp  services.hpp  systems.hpp  terrainChunk.hpp  thrustSystem.hpp  thruster.hpp  ui.hpp  universe.hpp  universeNode.hpp  utils.hpp  worldNode.hpp
include/UI/: gadget.hpp  scene.hpp
include/components/: astronautBrain.hpp  body.hpp  brain.hpp  drawable.hpp  hand.hpp  health.hpp  inventory.hpp  item.hpp  name.hpp  position.hpp  (+4 more)
source/: audioManager.cpp  baseBlock.cpp  block.cpp  colliderManager.cpp  config.cpp  controllable.cpp  fdd.cpp  fontManager.cpp  fuel.cpp  fuelContainer.cpp  gameCore.cpp  graphics.cpp  graphicsManager.cpp  interactable.cpp  jsonFactory.cpp  jsonTools.cpp  main.cpp  nodeGenerator.cpp  observer.cpp  physicsEngine.cpp  prefab.cpp  services.cpp  systems.cpp  terrainChunk.cpp  thrustSystem.cpp  thruster.cpp  universeNode.cpp  utils.cpp  worldNode.cpp
(+119 files in other folders)
