cmake_minimum_required(VERSION 2.8)

project(Z3)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
set(SRC_LIST "main.cpp")
message(STATUS "Compiling")
if(__SWITCH__)
    message(STATUS "SWITCH")
    find_package(Switch REQUIRED)
    #add_executable(${PROJECT_NAME}.elf ${SRC_LIST})
    add_switch_nro(${PROJECT_NAME} ${SRC_LIST})
else(__SWITCH__)
    message(STATUS "PC")
    add_executable(${PROJECT_NAME} ${SRC_LIST})
endif(__SWITCH__)
